--- a/.dev.env
+++ b/.dev.env
@@ -1,5 +1,6 @@
 DEBUG=1
 GHOST_ALLOWED_HOSTS="localhost,127.0.0.1"
+GHOST_CSRF_TRUSTED_ORIGINS="http://localhost:8000"
 GHOST_WEB_APP_PORT=5000
 GHOST_APP_HOME="/home/app/web"
 GHOST_HOME="/home/app/"
